public class Cliente {
    @lombok.Getter
    @lombok.Setter
    private String nome;
    @lombok.Getter
    private String conta;

}

